--- a/resume.css
+++ b/resume.css
@@ -3,8 +3,28 @@
     display:flex;
     justify-content: center;
     height:100vh;
-
+    user-select: none;
 }
 img{
     box-shadow:2px 3px 15px blue;
+    width:50%;
+    user-select: none;
+}
+@media only screen and (min-width:300px) and(max-width:630px){
+img{
+    box-shadow:2px 3px 15px blue;
+    width:100%;
+    height:100vh;
+    user-select: none;
+}
+.resume{
+    background-color:black;
+    display:flex;
+margin-left:20%;
+width:70%;
+    height:100vh;
+    user-select: none;
+
+}
+
 }
